--- a/Eng-Software/descricao_tecnica_dos_sistemas.tex
+++ b/Eng-Software/descricao_tecnica_dos_sistemas.tex
@@ -15,28 +15,28 @@ Na gestão de pedidos, o gestor de pedidos, só terá que preencher dados na apl
 Na figura abaixo representa-se o modelo genérico de casos de uso do sistema ePadaria sob a forma de um diagrama de pacotes. Cada pacote agrega uma ou mais partes do sistema que se destinam a suportar processos da organização e/ou a reunir um conjunto de funcionalidades. Em cada pacote incluem-se alguns exemplos de Atores e casos de uso desenvolvidos para o sistema.
 
 \subsubsection{Requisitos}
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics{requisito_funcional1}
 	\caption{Requisito funcional Interface do sistema}
 	\label{fig:requisitofuncional1}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics{requisito_funcional2}
 	\caption{Requisito funcional Iniciar Sessão/Registo no sistema}
 	\label{fig:requisitofuncional2}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics{requisito_funcional3}
 	\caption{kk}
 	\label{fig:requisitofuncional3}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics{requisito_funcional4}
 	\caption{}
@@ -46,42 +46,42 @@ Na figura abaixo representa-se o modelo genérico de casos de uso do sistema ePa
 
 \subsubsection{Requisitos não-funcionais}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics{requisito_nao_funcional1}
 	\caption{}
 	\label{fig:requisitonaofuncional1}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics{requisito_nao_funcional2}
 	\caption{}
 	\label{fig:requisitonaofuncional2}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics{requisito_nao_funcional3}
 	\caption{}
 	\label{fig:requisitonaofuncional3}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics{requisito_nao_funcional4}
 	\caption{}
 	\label{fig:requisitonaofuncional4}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics{requisito_nao_funcional5}
 	\caption{}
 	\label{fig:requisitonaofuncional5}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics{requisito_nao_funcional6}
 	\caption{}
