--- a/Eng-Software/plano_projeto.tex
+++ b/Eng-Software/plano_projeto.tex
@@ -1,5 +1,6 @@
 \documentclass{report}
 \usepackage{graphicx}
+\usepackage{float}
 
 \title{Plano de projeto ePadaria}
 \author{Ricardo Sa Monteiro - a21907901\\ Vasco Rodrigues - a21908366 \\ Rita Azevedo - a21903055}
