--- a/Eng-Software/plano_de_documentacao.tex
+++ b/Eng-Software/plano_de_documentacao.tex
@@ -7,7 +7,7 @@ Os documentos que será necessário produzir serão no
 meadamente o documento de especificação de requisitos,o plano de qualidade,o plano de testes,o plano de formação,o plano de gestão de dados,o plano de gestão de recursos,o plano de segurança e o plano de gestão de risco
 \section{Identificação do responsável pela sua redação e aprovação}
 No desenvolvimento dos documentos necessários os responsáveis pela respetiva redação são os alunos Ricardo Monteiro, Rita Azevedo e Vasco Rodrigues. Os documentos e respetivos planos, são estruturados e planeados com o máximo cuidado, sendo usado técnicas e práticas comuns na construção dos documentos, para permitir o fácil entendimento na consulta e leitura.\\
-A pessoa responsável pela aprovação dos documentos usados para construir e implementar os diversos planos com objetivo de tornar o ePadaria o mais eficiente possível é xxxxxxxxxx, assim concluída a aprovação dos documentos será implementado o sistema ePadaria seguindo todos os documentos.
+A pessoa responsável pela aprovação dos documentos usados para construir e implementar os diversos planos com objetivo de tornar o ePadaria o mais eficiente possível é xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx, assim concluída a aprovação dos documentos será implementado o sistema ePadaria seguindo todos os documentos.
 
 
 \section{Descrição de cada documento}
