FEITO ,só falta pequenas alterações e imagens

--- a/Eng-Software/plano_de_documentacao.tex
+++ b/Eng-Software/plano_de_documentacao.tex
@@ -14,8 +14,8 @@ A pessoa responsável pela aprovação dos documentos usados para construir e im
 \subsection{Documento de especificação de requisitos}
 No documento de especificação de requisitos do ePadaria é descrito o sistema antes de passar á implementação com auxílio de tabelas e diagramas específicos usados na prática do documento, e também contem os recursos necessários ao desenvolvimento do sistema. 
 \subsection{Plano de qualidade}
-No plano de qualidade está inserido o plano usado no ePadaria ao longo do seu desenvolvimento de maneira a minimizar riscos e haver maior sucesso na conclusão do sistema. \\ O plano irá constar os responsáveis por a qualidade do ePadaria incluindo as responsabilidades do gestor.
-FALAR DOS OUTROS 2 topicos
+No plano de qualidade está inserido o plano usado no ePadaria ao longo do seu desenvolvimento de maneira a minimizar riscos e haver maior sucesso na conclusão do sistema. \\ O plano irá constar os responsáveis pela qualidade do ePadaria, incluindo as responsabilidades do gestor.
+
 \subsection{Plano de gestão de dados}
 No plano de gestão de dados é descrito a forma como os dados foram recolhidos, armazenados e manipulados até ao "estado" final desses dados onde irão ser usados na base de dados. Irá ser apresentado a base de dados do ePadaria com as respetivas pessoas que têm permissões de acesso aos dados e a quais.
 \subsection{Plano de gestão de recursos}
