--- a/Eng-Software/plano_de_gestao_de_configuracoes.tex
+++ b/Eng-Software/plano_de_gestao_de_configuracoes.tex
@@ -10,6 +10,6 @@ Para estar no modo registado,o utilizador primeiro terá de se registar no nosso
 \subsubsection{Público}
 O modo público é semelhante ao modo de utilizadores registados. Quem estiver neste modo poderá visualizar a home page do ePadaria, os contactos e informação sobre o ePadaria como também as páginas de Log In e Sig in do cliente e o carrinho. Também poderá aceder ao log in do funcionário mas só em modo administrador é possível aceder á página de gestão de pedidos e produtos, como também para aceder aos produtos listados no ePadaria é necessário estar em modo Utilizadores registados.
 \subsubsection{Administradores}
-O modo Administradores é um modo restrito, esses utilizadores irão poder visualizar como público, mas não terão acesso à parte de comprar produtos. Em vez disso nesse modo terão acesso a uma página que só os administradores poderão aceder, essa página contém acesso para o administrador poder remover ou adicionar pedidos e também poder visualizar os pedidos feitos que ainda aguardam conclusão e os pedidos já concluídos.
+O modo Administradores é um modo restrito, esses utilizadores irão poder visualizar como público, mas não terão acesso à parte de comprar produtos. Em vez disso nesse modo terão acesso a uma página que só os administradores poderão aceder, essa página contém acesso para o administrador poder remover ou adicionar pedidos, visualizar os pedidos feitos que ainda aguardam conclusão, visualizar os pedidos já concluídos como tambem adicionar e eliminar produtos.
 \subsubsection{Gestor do sistema}
 O ePadaria não tem especificamente o modo gestor do sistema, o gestor acede diretamente ao código e aos dados através do Eclipse e do MySQL
