--- a/Eng-Software/plano_de_qualidade.tex
+++ b/Eng-Software/plano_de_qualidade.tex
@@ -25,4 +25,4 @@ Com o plano de qualidade pretende-se para o nosso sistema:\\
 -Manter a qualidade do documento de requisitos;\\
 -Estruturar a base de dados com qualidade e organização;\\
 -Construir os Mock Up da ePadaria tendo em conta o necessário para ser intuitivo;\\
-ACABAR!!!!!!!!!!!!!!!
+-Manter a organização e comunicação continua ao longo do desenvolvimento do projeto;\\
