--- a/Eng-Software/standards_tecnicas_ferramentas.tex
+++ b/Eng-Software/standards_tecnicas_ferramentas.tex
@@ -18,7 +18,7 @@ Existem vários documentos usados á parte para o ePadaria que são dados como P
 Ao longo do desenvolvimento da documentação e desenvolvimento do sistema ePadaria é aplicado técnicas dadas e aprendidas nas respetivas cadeiras de Analise e Desenho De Sistemas, Engenharia de Software e Programação para web.\\
 Na cadeira de Analise e desenho de sistemas aprendemos técnicas e práticas para construir o documento de requisito, para além de onde surgiu a ideia do sistema ePadaria, que tem o intuito de ajudar as pequenas padarias sem sistema informático. É usado técnicas como construção de diagramas aos quais:\\ 
 -diagramas de casos de uso;\\ 
--diagramas de classe\\;
+-diagramas de classe;\\
 -diagramas de objetos;\\
 -diagramas de atividade\\
 -diagramas de estados;\\
@@ -36,8 +36,8 @@ Sendo que o ePadaria, que como sabemos irá nos permitir ajuda as pequenas padar
 As ferramentas usadas para construir o ePadaria são programas que nos permitem criar bases de dados, a nossa interface como as suas funções. \\
 O programa MySQL é um serviço de armazenamento de dados gerido para inserir aplicativos nativos na nuvem. O MySQL é o programa usado para guardar a base de dados do ePadaria, usando linguagem SQL. A base de dados constitui as diferentes tabelas para armazenar os dados dos clientes, produtos, padarias e dos funcionários.\\
 Para construir o sistema ePadaria é usado o programa Eclipse IDE, o programa permite criar diversos tipos de projetos e ficheiros ao qual podendo usar vários tipos de linguagens de programação, de marcação e de consulta estruturada. No ePadaria é criado um projeto Dynamic Web Project com ficheiros JSP. As diversas linguagens usadas são:\\
-- HTML (Linguagem de Marcação);\\
-- SQL (Linguagem de consulta estruturada);\\
-- CSS (mecanismo para adicionar estilo a um documento web);\\
-- Java (Linguagem de Programação);\\
-- JavaScript (Linguagem de Programação);\\
+- \textbf{HTML}  (Linguagem de Marcação);\\
+- \textbf{SQL}  (Linguagem de consulta estruturada);\\
+- \textbf{CSS}  (mecanismo para adicionar estilo a um documento web);\\
+- \textbf{Java}  (Linguagem de Programação);\\
+- \textbf{JavaScript} (Linguagem de Programação);\\
