--- a/Eng-Software/organizacao_da_equipa.tex
+++ b/Eng-Software/organizacao_da_equipa.tex
@@ -4,18 +4,19 @@
 Este projeto irá requer competências relacionadas com programação backend e frontend, gestão de equipa e desenho e gestão de bases de dados.
 \section{Identificação dos membros da equipa}
 \paragraph{Ricardo Sá Monteiro 
-\\ Aluno de 2º ano na Universidade Lusófona do Porto}
+\\ Aluno no curso de Engenharia Informática, 2º ano, na Universidade Lusófona do Porto}
 \paragraph{Rita Mendes de Azevedo
-\\Aluna de 2º ano na Universidade Lusófona do Porto}
+\\ Aluno no curso de Engenharia Informática, 2º ano, na Universidade Lusófona do Porto}
 \paragraph{Vasco Manuel Pinheiro de Oliveira Matos Rodrigues
-\\Aluno de 2º ano na Universidade Lusófona do Porto}
+\\ Aluno no curso de Engenharia Informática, 2º ano, na Universidade Lusófona do Porto}
 \section{Responsabilidades e Tarefas de cada membro da equipa}
+Cada membro da equipa foi responsável por completar vários capítulos e secções deste documento, como também no desenvolvimento do sistema.
 \subsection{Ricardo Sá Monteiro}
-Responsavel por x
+Responsável por vários capitulos, correção e formatação do documento.
 \subsection{Rita Mendes de Azevedo}
-Responsavel por y
+Responsavel por vários capitulos, design e organização.
 \subsection{Vasco Manuel Pinheiro de Oliveira Matos Rodrigues}
-Responsavel por z
+Responsavel por vários capitulos e pesquisa.
 \section{Identificação de formação em valências/competências a adquirir}
 Formações em programação de x y e z
 \section{Identificação de necessidades de contratação de pessoal}
@@ -23,4 +24,4 @@ Não é necessario
 \section{Identificação de necessidades de subcontratação}
 Também não acho necessario
 \section{Se necessário pode ser complementado com um organograma}
-Por meter...
+Por meter... 
