--- a/Eng-Software/plano_projeto.tex
+++ b/Eng-Software/plano_projeto.tex
@@ -19,6 +19,8 @@
 \input{plano_de_gestao_de_configuracoes}
 \input{plano_de_documentacao}
 \input{plano_de_gestao_de_dados}
+\input{plano_de_testes}
+\input{plano_de_formaçao}
 \bibliography{library}
 \end{document}
 
