mais cenas nos 2 projetos

--- a/Eng-Software/calendarizacao.tex
+++ b/Eng-Software/calendarizacao.tex
@@ -18,3 +18,10 @@ A nossa equipa tem vários milestones a cumprir, dentro do planeamento do projet
 
 \subsection{Deliverables}
 Os "Deliverables" planeados de momento são principalmente a entrega de uma "webapp" que consiga correr em navegadores web, seja num computador ou telémovel. No futuro, se possível seria feito uma versão "app" para Windows, MAC OS e Linux e de seguida trabalhar numa app para Android e IOS.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=6cm]{gantt}
+	\caption{Gantt Poject do ePadaria}
+	\label{fig:gantt}
+\end{figure}
