--- a/Eng-Software/descricao_tecnica_dos_sistemas.tex
+++ b/Eng-Software/descricao_tecnica_dos_sistemas.tex
@@ -135,14 +135,48 @@ Não é necessário se ter um dispositivo de alto desempenho para se poder acede
 Por parte dos funcionários da padaria o melhor é usar algo e pelo menos médio desempenho de maneira a o sistema responder de forma rápida e não atrasar a produtividade.
 
 Colocar diagrama de distribuição!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-\section {Diagrama de Gantt}
+
+
+
+\section{Descrição da interface gráfica}
+
+A interface gráfica do ePadaria tem em conta a usabilidade e o necessário para atender as espectativas visuais dos nossos clientes e dos clientes das padarias. Em qualquer parte do site será possível aceder à página inicial, aos contactos, “sobre nós" onde se encontra informação sobre o ePadaria, apenas não será possível aceder a essas páginas pela página do funcionário.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=6cm]{gantt}
-	\caption{Gantt Poject do ePadaria}
-	\label{fig:gantt}
+	\includegraphics[width=15cm]{"mockup sobre nos"}
+	\caption{Página Web do ePadaria: Sobre nós}
+	\label{fig:mockup-sobre-nos}
 \end{figure}
 
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=15cm]{"mockup sig in"}
+	\caption{Página Web do ePadaria: Sign in}
+	\label{fig:mockup-sig-in}
+\end{figure}
+
+
+Ao efetuar o log in o icone "Log in" irá aparecer com o nome do cliente, para o funcionário quando entra na página do funcionário irá aparecer com o nome após o "Bem-vindo" . O funcionário para aceder ao log in tem de aceder à mesma página que o funcionário e de seguida clicar em "Log In funcionário".
+ 
+ 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=15cm]{"mockup log in"}
+	\caption{Página Web do ePadaria: Log in}
+	\label{fig:mockup-log-in}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=15cm]{"mockup page func"}
+	\caption{Página Web do ePadaria: Página do funcionário}
+	\label{fig:mockup-page-func}
+\end{figure}
+
+
+O cliente tem acesso aos produtos do site para efetuar o seu pedido. O funcionário pode também adicionar pedidos aos quais recebe por telemóvel ou email.
+
+COLOCAR MOCKUP !!!!!!!!!!!!!!
 
 
