--- a/Eng-Software/plano_projeto.tex
+++ b/Eng-Software/plano_projeto.tex
@@ -21,6 +21,8 @@
 \input{plano_de_gestao_de_dados}
 \input{plano_de_testes}
 \input{plano_de_formaçao}
+\input{plano_de_segurança}
+\input{referencias}
 \bibliography{library}
 \end{document}
 
