--- a/Eng-Software/calendarizacao.tex
+++ b/Eng-Software/calendarizacao.tex
@@ -17,11 +17,11 @@ A nossa equipa tem vários milestones a cumprir, dentro do planeamento do projet
 \\\\Depois do desenvolvimento do projeto e quando se já tiver o produto disponível esperamos que se consiga distribuir a webapp por várias padarias locais, testar num ambiente real e ver se o nosso produto tem espaço no mercado.
 
 \subsection{Deliverables}
-Os "Deliverables" planeados de momento são principalmente a entrega de uma "webapp" que consiga correr em navegadores web, seja num computador ou telémovel. No futuro, se possível seria feito uma versão "app" para Windows, MAC OS e Linux e de seguida trabalhar numa app para Android e IOS.
+Os "Deliverables" planeados de momento são principalmente a entrega de uma "webapp" que consiga correr em navegadores web, seja num computador ou telémovel. No futuro, se possível seria feito uma versão "app" para Windows, MAC OS e Linux e de seguida trabalhar numa app para Android e IOS.\\
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=6cm]{gantt}
+	\includegraphics[width=15cm]{gantt}
 	\caption{Gantt Poject do ePadaria}
 	\label{fig:gantt}
 \end{figure}
