--- a/Eng-Software/plano_projeto.tex
+++ b/Eng-Software/plano_projeto.tex
@@ -22,7 +22,9 @@
 \input{plano_de_testes}
 \input{plano_de_formaçao}
 \input{plano_de_segurança}
+\input{plano_de_manutenção}
 \input{referencias}
+\input{conclusão}
 \bibliography{library}
 \end{document}
 
