--- a/Eng-Software/referencias.tex
+++ b/Eng-Software/referencias.tex
@@ -2,4 +2,7 @@
 \label{referencias}
 \section{Plano de segurança}
 \\
--https://www.meupositivo.com.br/panoramapositivo/seguranca-da-informacao/
+-https://www.meupositivo.com.br/panoramapositivo/seguranca-da-informacao/ \\
+
+\section{Plano de manutenção}
+-https://edisciplinas.usp.br/pluginfile.php/325655/mod_resource/content/1/Aula09_Manutencao.pdf\\
