só falta o diagrama

--- a/Eng-Software/calendarizacao.tex
+++ b/Eng-Software/calendarizacao.tex
@@ -21,7 +21,7 @@ Os "Deliverables" planeados de momento são principalmente a entrega de uma "web
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=15cm]{gantt}
+	\includegraphics[width=20cm,angle =90 ]{gantt}
 	\caption{Gantt Poject do ePadaria}
 	\label{fig:gantt}
 \end{figure}
