--- a/Eng-Software/plano_de_gestao_de_dados.tex
+++ b/Eng-Software/plano_de_gestao_de_dados.tex
@@ -3,7 +3,15 @@
 \section{Descrição da forma como os dados são recolhidos, armazenados e manipulados}
 Os dados inseridos no sistema ePadaria são recolhidos através do sistema com ligação á base de dados e diretamente lá armazenados. Apenas alguns dados podem ser manipulados, parte do cliente poderá mudar os seus dados pessoais que também mudam diretamente na altura na própria base de dados, mas após efetuado e pago um pedido o cliente não poderá fazer alterações aos produtos pedidos, o funcionário pode adicionar, remover ou alterar produtos pelo ePadaria e terá acesso aos pedidos feitos dos clientes ,em que pode dar como concluído e esse pedido passa para a tabela dos pedidos concluídos dentro da base de dados e que o funcionário também poderá ter acesso. Quanto aos dados pessoais do funcionário só terá acesso ao username e password e caso houvesse necessidade de alterar a padaria teria de contactar o ePadaria para o fazer diretamente na base de dados.
 \section{Apresentação da base de dados}
-COLOCAR FOTOS DE PREFERENCIA o diagrama ,fazer BD no xampp
+
+Na imagem abaixo encontra-se estruturado as tabelas da base de dados do ePadaria,é uma base de dados simples sem a necessidade de chaves externas,visto que um funcionário pode inserir pedidos nas base de dados sem o cliente estar registado no ePadaria e o cliente pedir um produto com alguma alteração do original.
+\begin{figure}[H]
+	\centering
+	\includegraphics{bd}
+	\caption{Estrutura da base de dados do ePadaria}
+	\label{fig:bd}
+\end{figure}
+
 \section{Permissões de acesso a dados}
 A base de dados do ePadaria só pode ser diretamente acedida pelos gestores do projeto tendo em conta a conformidade com o RGPD na proteção e tratamento de dados.\\
 Apenas os utilizadores/clientes poderão aceder aos respetivos dados através da sua conta, o funcionário apenas pode visualizar os dados do cliente encontrados no pedido, os restantes dados como password e e-mail apenas os gestores e o próprio utilizador/cliente é que terá acesso.\\
@@ -31,7 +39,7 @@ deslocações.(Artº 4º, nº 4); \\
 -\textbf{Princípio da integridade e confidencialidade} (Artº 5º, nº 1 f));\\
 
 \section{Estado inicial da base de dados}
-??????????
+A base de dados do ePadaria contem alguns exemplos de produtos listados quando é entregue a um cliente,assim este terá perspetiva de como fica os produtos listados no sistema.O cliente que receber pode eliminar esses exemplos ou pedir ao encarregados pela ePadaria para o fazer.
 \section{Tarefas de carregamento/povoamento inicial de configurações de dados}
 Ao fornecer o ePadaria á padaria que adquiriu o sistema, já se encontra alguns dados de exemplo inseridos, aos quais principalmente produtos e pedidos, quem tem a responsabilidade de inserir esses dados e fazer a sua configuração é algum dos gestores do ePadaria, em que os respetivos funcionários da padaria poderão eliminá-los quando quiserem. \\
 Caso haja a necessidade de fazer alguma alteração ou configuração em um pedido ou produto que o funcionário ou cliente não esteja a conseguir, o funcionário tem o dever de contactar o suporte técnico a pedir ajuda e essa pessoa irá ajudar alterando diretamente na base de dados.
